# dart_opus

./: .metadata  .pubignore  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: publish.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/opus_ffi_example/: MainActivity.kt
example/assets/data/: R20251013-120111.opus
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  pcm_data_saver.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: opus_ffi.podspec
ios/Classes/: OpusFfiForceLinker.m  opus_ffi.c
lib/: opus_decoder.dart  opus_encoder.dart  opus_error.dart  opus_ffi.dart  opus_ffi_bindings_generated.dart  opus_utils.dart
linux/: .gitignore  CMakeLists.txt
macos/: opus_ffi.podspec
macos/Classes/: opus_ffi.c  opus_ffi.h
rust/: Cargo.toml  build.rs  cbindgen.toml
rust/include/: opus_ffi.h
rust/src/: decoder.rs  encoder.rs  error.rs  lib.rs  utils.rs
rust/tests/: test_opus.rs
src/: CMakeLists.txt  opus_ffi.c  opus_ffi.h
tool/: build_apple.sh  build_linux.sh  build_windows.ps1  create_apple_xcframeworks.sh  create_ios_xcframework.sh
windows/: .gitignore  CMakeLists.txt
